--- a/umainform.lfm
+++ b/umainform.lfm
@@ -5,7 +5,6 @@ object MainForm: TMainForm
   Width = 1787
   ClientHeight = 240
   ClientWidth = 1787
-  DesignTimePPI = 120
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnShow = FormShow
@@ -13,7 +12,7 @@ object MainForm: TMainForm
   WindowState = wsMaximized
   object ToolPanel: TPanel
     Left = 2
-    Height = 40
+    Height = 32
     Top = 2
     Width = 1783
     Align = alTop
@@ -22,20 +21,20 @@ object MainForm: TMainForm
     BorderSpacing.Right = 2
     BevelOuter = bvNone
     BorderStyle = bsSingle
-    ClientHeight = 36
+    ClientHeight = 28
     ClientWidth = 1779
     ParentFont = False
     TabOrder = 0
     object AboutButton: TSpeedButton
       Cursor = crHandPoint
-      Left = 1679
-      Height = 36
+      Left = 1700
+      Height = 28
       Hint = 'О программе'
       Top = 0
-      Width = 40
+      Width = 32
       Align = alRight
-      Constraints.MaxWidth = 40
-      Constraints.MinWidth = 40
+      Constraints.MaxWidth = 32
+      Constraints.MinWidth = 32
       Images = Images.PX24
       ImageIndex = 1
       OnClick = AboutButtonClick
@@ -44,14 +43,14 @@ object MainForm: TMainForm
     end
     object ExitButton: TSpeedButton
       Cursor = crHandPoint
-      Left = 1739
-      Height = 36
+      Left = 1747
+      Height = 28
       Hint = 'Выход'
       Top = 0
-      Width = 40
+      Width = 32
       Align = alRight
-      Constraints.MaxWidth = 40
-      Constraints.MinWidth = 40
+      Constraints.MaxWidth = 32
+      Constraints.MinWidth = 32
       Images = Images.PX24
       ImageIndex = 0
       OnClick = ExitButtonClick
@@ -60,14 +59,14 @@ object MainForm: TMainForm
     end
     object RefreshButton: TSpeedButton
       Cursor = crHandPoint
-      Left = 1639
-      Height = 36
+      Left = 1668
+      Height = 28
       Hint = 'Обновить'
       Top = 0
-      Width = 40
+      Width = 32
       Align = alRight
-      Constraints.MaxWidth = 40
-      Constraints.MinWidth = 40
+      Constraints.MaxWidth = 32
+      Constraints.MinWidth = 32
       Images = Images.PX24
       ImageIndex = 2
       OnClick = RefreshButtonClick
@@ -75,10 +74,10 @@ object MainForm: TMainForm
       ParentShowHint = False
     end
     object DividerBevel1: TDividerBevel
-      Left = 1719
-      Height = 36
+      Left = 1732
+      Height = 28
       Top = 0
-      Width = 20
+      Width = 15
       Caption = 'DividerBevel1'
       Align = alRight
       BevelWidth = 2
@@ -88,13 +87,13 @@ object MainForm: TMainForm
     end
     object DictionaryButton: TSpeedButton
       Cursor = crHandPoint
-      Left = 1461
-      Height = 36
+      Left = 1541
+      Height = 28
       Top = 0
-      Width = 158
+      Width = 112
       Align = alRight
       AutoSize = True
-      Caption = ' Справочники ▼ '
+      Caption = ' Атрибуты ▼ '
       Images = Images.PX24
       ImageIndex = 11
       Margin = 5
@@ -102,10 +101,10 @@ object MainForm: TMainForm
       OnClick = DictionaryButtonClick
     end
     object DividerBevel2: TDividerBevel
-      Left = 1619
-      Height = 36
+      Left = 1653
+      Height = 28
       Top = 0
-      Width = 20
+      Width = 15
       Caption = 'DividerBevel2'
       Align = alRight
       BevelWidth = 2
@@ -116,10 +115,10 @@ object MainForm: TMainForm
     object AddButton: TSpeedButton
       Cursor = crHandPoint
       Left = 0
-      Height = 36
+      Height = 28
       Hint = 'Добавить'
       Top = 0
-      Width = 40
+      Width = 32
       Align = alLeft
       Images = Images.PX24
       ImageIndex = 3
@@ -129,11 +128,11 @@ object MainForm: TMainForm
     end
     object DelButton: TSpeedButton
       Cursor = crHandPoint
-      Left = 40
-      Height = 36
+      Left = 32
+      Height = 28
       Hint = 'Удалить'
       Top = 0
-      Width = 40
+      Width = 32
       Align = alLeft
       Enabled = False
       Images = Images.PX24
@@ -144,11 +143,11 @@ object MainForm: TMainForm
     end
     object EditButton: TSpeedButton
       Cursor = crHandPoint
-      Left = 80
-      Height = 36
+      Left = 64
+      Height = 28
       Hint = 'Редактировать'
       Top = 0
-      Width = 40
+      Width = 32
       Align = alLeft
       Enabled = False
       Images = Images.PX24
@@ -158,10 +157,10 @@ object MainForm: TMainForm
       ParentShowHint = False
     end
     object DividerBevel3: TDividerBevel
-      Left = 120
-      Height = 36
+      Left = 96
+      Height = 28
       Top = 0
-      Width = 20
+      Width = 15
       Caption = 'DividerBevel3'
       Align = alLeft
       BevelWidth = 2
@@ -171,11 +170,11 @@ object MainForm: TMainForm
     end
     object ExportButton: TSpeedButton
       Cursor = crHandPoint
-      Left = 240
-      Height = 36
+      Left = 190
+      Height = 28
       Hint = 'Экспорт в файл электронной таблицы XLSX или ODS'
       Top = 0
-      Width = 40
+      Width = 32
       Align = alLeft
       Enabled = False
       Images = Images.PX24
@@ -186,15 +185,15 @@ object MainForm: TMainForm
     end
     object PDFShowButton: TSpeedButton
       Cursor = crHandPoint
-      Left = 140
-      Height = 38
+      Left = 111
+      Height = 30
       Hint = 'Открыть документ'
       Top = 0
-      Width = 40
+      Width = 32
       Align = alLeft
       AutoSize = True
-      Constraints.MinHeight = 38
-      Constraints.MinWidth = 40
+      Constraints.MinHeight = 30
+      Constraints.MinWidth = 32
       Enabled = False
       Glyph.Data = {
         36100000424D3610000000000000360000002800000020000000200000000100
@@ -337,15 +336,15 @@ object MainForm: TMainForm
     end
     object PDFCopyButton: TSpeedButton
       Cursor = crHandPoint
-      Left = 180
-      Height = 38
+      Left = 143
+      Height = 30
       Hint = 'Скопировать документ'
       Top = 0
-      Width = 40
+      Width = 32
       Align = alLeft
       AutoSize = True
-      Constraints.MinHeight = 38
-      Constraints.MinWidth = 40
+      Constraints.MinHeight = 30
+      Constraints.MinWidth = 32
       Enabled = False
       Glyph.Data = {
         36100000424D3610000000000000360000002800000020000000200000000100
@@ -487,10 +486,10 @@ object MainForm: TMainForm
       ParentShowHint = False
     end
     object DividerBevel4: TDividerBevel
-      Left = 220
-      Height = 36
+      Left = 175
+      Height = 28
       Top = 0
-      Width = 20
+      Width = 15
       Caption = 'DividerBevel4'
       Align = alLeft
       BevelWidth = 2
@@ -499,10 +498,10 @@ object MainForm: TMainForm
       ParentFont = False
     end
     object DividerBevel5: TDividerBevel
-      Left = 280
-      Height = 36
+      Left = 222
+      Height = 28
       Top = 0
-      Width = 20
+      Width = 15
       Caption = 'DividerBevel5'
       Align = alLeft
       BevelWidth = 2
@@ -512,28 +511,28 @@ object MainForm: TMainForm
     end
     object FilterPanel: TPanel
       AnchorSideRight.Control = DividerBevel6
-      Left = 300
-      Height = 36
+      Left = 237
+      Height = 28
       Top = 0
-      Width = 1141
+      Width = 1289
       Align = alLeft
       Anchors = [akTop, akLeft, akRight, akBottom]
       BevelOuter = bvNone
-      ClientHeight = 36
-      ClientWidth = 1141
+      ClientHeight = 28
+      ClientWidth = 1289
       TabOrder = 0
       object FilterClearButton: TSpeedButton
         Cursor = crHandPoint
-        Left = 1099
-        Height = 38
+        Left = 1255
+        Height = 30
         Hint = 'Очистить фильтр'
         Top = 0
-        Width = 40
+        Width = 32
         Align = alRight
         AutoSize = True
         BorderSpacing.Right = 2
-        Constraints.MinHeight = 38
-        Constraints.MinWidth = 40
+        Constraints.MinHeight = 30
+        Constraints.MinWidth = 32
         Enabled = False
         Glyph.Data = {
           36100000424D3610000000000000360000002800000020000000200000000100
@@ -679,9 +678,9 @@ object MainForm: TMainForm
         AnchorSideTop.Control = FilterPanel
         AnchorSideTop.Side = asrCenter
         Left = 2
-        Height = 20
-        Top = 8
-        Width = 59
+        Height = 15
+        Top = 7
+        Width = 47
         Align = alCustom
         BorderSpacing.Left = 2
         Caption = 'Фильтр:'
@@ -693,12 +692,12 @@ object MainForm: TMainForm
         AnchorSideLeft.Side = asrBottom
         AnchorSideTop.Control = FilterPanel
         AnchorSideTop.Side = asrCenter
-        Left = 320
-        Height = 20
-        Top = 8
-        Width = 24
+        Left = 258
+        Height = 15
+        Top = 7
+        Width = 19
         Align = alCustom
-        BorderSpacing.Left = 12
+        BorderSpacing.Left = 10
         Caption = 'тип'
       end
       object DocTypeComboBox: TComboBox
@@ -708,16 +707,16 @@ object MainForm: TMainForm
         AnchorSideTop.Side = asrCenter
         AnchorSideRight.Control = Owner
         AnchorSideRight.Side = asrBottom
-        Left = 350
-        Height = 28
-        Top = 4
-        Width = 188
-        BorderSpacing.Left = 6
-        BorderSpacing.Top = 8
-        BorderSpacing.Right = 8
-        Constraints.MinWidth = 188
+        Left = 282
+        Height = 23
+        Top = 3
+        Width = 150
+        BorderSpacing.Left = 5
+        BorderSpacing.Top = 6
+        BorderSpacing.Right = 6
+        Constraints.MinWidth = 150
         DropDownCount = 20
-        ItemHeight = 20
+        ItemHeight = 15
         Style = csDropDownList
         TabOrder = 0
         OnChange = DocTypeComboBoxChange
@@ -727,12 +726,12 @@ object MainForm: TMainForm
         AnchorSideLeft.Side = asrBottom
         AnchorSideTop.Control = FilterPanel
         AnchorSideTop.Side = asrCenter
-        Left = 73
-        Height = 20
-        Top = 8
-        Width = 41
+        Left = 59
+        Height = 15
+        Top = 7
+        Width = 34
         Align = alCustom
-        BorderSpacing.Left = 12
+        BorderSpacing.Left = 10
         Caption = 'статус'
       end
       object DocStatusComboBox: TComboBox
@@ -742,16 +741,16 @@ object MainForm: TMainForm
         AnchorSideTop.Side = asrCenter
         AnchorSideRight.Control = Owner
         AnchorSideRight.Side = asrBottom
-        Left = 120
-        Height = 28
-        Top = 4
-        Width = 188
-        BorderSpacing.Left = 6
-        BorderSpacing.Top = 8
-        BorderSpacing.Right = 8
-        Constraints.MinWidth = 188
+        Left = 98
+        Height = 23
+        Top = 3
+        Width = 150
+        BorderSpacing.Left = 5
+        BorderSpacing.Top = 6
+        BorderSpacing.Right = 6
+        Constraints.MinWidth = 150
         DropDownCount = 20
-        ItemHeight = 20
+        ItemHeight = 15
         Style = csDropDownList
         TabOrder = 1
         OnChange = DocStatusComboBoxChange
@@ -761,12 +760,12 @@ object MainForm: TMainForm
         AnchorSideLeft.Side = asrBottom
         AnchorSideTop.Control = FilterPanel
         AnchorSideTop.Side = asrCenter
-        Left = 550
-        Height = 20
-        Top = 8
-        Width = 46
+        Left = 442
+        Height = 15
+        Top = 7
+        Width = 36
         Align = alCustom
-        BorderSpacing.Left = 12
+        BorderSpacing.Left = 10
         Caption = 'номер'
       end
       object DocNumEdit: TEdit
@@ -774,12 +773,12 @@ object MainForm: TMainForm
         AnchorSideLeft.Side = asrBottom
         AnchorSideTop.Control = FilterPanel
         AnchorSideTop.Side = asrCenter
-        Left = 602
-        Height = 28
-        Top = 4
-        Width = 150
-        BorderSpacing.Left = 6
-        BorderSpacing.Top = 8
+        Left = 483
+        Height = 23
+        Top = 3
+        Width = 120
+        BorderSpacing.Left = 5
+        BorderSpacing.Top = 6
         TabOrder = 2
         OnChange = DocNumEditChange
       end
@@ -788,12 +787,12 @@ object MainForm: TMainForm
         AnchorSideLeft.Side = asrBottom
         AnchorSideTop.Control = FilterPanel
         AnchorSideTop.Side = asrCenter
-        Left = 764
-        Height = 20
-        Top = 8
-        Width = 105
+        Left = 613
+        Height = 15
+        Top = 7
+        Width = 81
         Align = alCustom
-        BorderSpacing.Left = 12
+        BorderSpacing.Left = 10
         Caption = 'наименование'
       end
       object DocNameEdit: TEdit
@@ -802,23 +801,23 @@ object MainForm: TMainForm
         AnchorSideTop.Control = FilterLabel
         AnchorSideTop.Side = asrCenter
         AnchorSideRight.Control = FilterClearButton
-        Left = 875
-        Height = 28
-        Top = 4
-        Width = 216
+        Left = 699
+        Height = 23
+        Top = 3
+        Width = 550
         Anchors = [akTop, akLeft, akRight]
-        BorderSpacing.Left = 6
-        BorderSpacing.Top = 8
-        BorderSpacing.Right = 8
+        BorderSpacing.Left = 5
+        BorderSpacing.Top = 6
+        BorderSpacing.Right = 6
         TabOrder = 3
         OnChange = DocNameEditChange
       end
     end
     object DividerBevel6: TDividerBevel
-      Left = 1441
-      Height = 36
+      Left = 1526
+      Height = 28
       Top = 0
-      Width = 20
+      Width = 15
       Caption = 'DividerBevel6'
       Align = alRight
       BevelWidth = 2
@@ -829,8 +828,8 @@ object MainForm: TMainForm
   end
   object VT: TVirtualStringTree
     Left = 2
-    Height = 194
-    Top = 44
+    Height = 202
+    Top = 36
     Width = 1783
     Align = alClient
     BorderSpacing.Around = 2
@@ -842,8 +841,8 @@ object MainForm: TMainForm
     OnDblClick = VTDblClick
   end
   object DictionaryMenu: TPopupMenu
-    Left = 544
-    Top = 48
+    Left = 435
+    Top = 38
     object TypesMenuItem: TMenuItem
       Caption = 'Типы документов'
       OnClick = TypesMenuItemClick
