--- a/forms/uaddoneditform.lfm
+++ b/forms/uaddoneditform.lfm
@@ -1,23 +1,24 @@
 object AddonEditForm: TAddonEditForm
   Left = 761
-  Height = 262
+  Height = 328
   Top = 232
-  Width = 550
+  Width = 688
   Caption = 'Редактирование приложения'
-  ClientHeight = 262
-  ClientWidth = 550
+  ClientHeight = 328
+  ClientWidth = 688
+  DesignTimePPI = 120
   OnCreate = FormCreate
   OnShow = FormShow
   LCLVersion = '3.2.0.0'
   object AddonLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
-    Left = 6
-    Height = 15
-    Top = 8
-    Width = 80
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 8
+    Left = 8
+    Height = 20
+    Top = 10
+    Width = 98
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 10
     Caption = 'Приложение:'
     Font.Style = [fsBold]
     ParentColor = False
@@ -28,12 +29,12 @@ object AddonEditForm: TAddonEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = AddonLabel
     AnchorSideTop.Side = asrBottom
-    Left = 81
-    Height = 19
-    Top = 29
-    Width = 70
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
+    Left = 104
+    Height = 24
+    Top = 38
+    Width = 88
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 8
     Caption = 'поправка'
     Checked = True
     TabOrder = 1
@@ -44,11 +45,11 @@ object AddonEditForm: TAddonEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = CorrectionRadioButton
     AnchorSideTop.Side = asrCenter
-    Left = 157
-    Height = 19
-    Top = 29
-    Width = 78
-    BorderSpacing.Left = 6
+    Left = 200
+    Height = 24
+    Top = 38
+    Width = 99
+    BorderSpacing.Left = 8
     Caption = 'изменение'
     TabOrder = 0
   end
@@ -56,11 +57,11 @@ object AddonEditForm: TAddonEditForm
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = CorrectionRadioButton
     AnchorSideTop.Side = asrCenter
-    Left = 6
-    Height = 15
-    Top = 31
-    Width = 19
-    BorderSpacing.Left = 6
+    Left = 8
+    Height = 20
+    Top = 40
+    Width = 24
+    BorderSpacing.Left = 8
     Caption = 'тип'
     ParentColor = False
   end
@@ -68,11 +69,11 @@ object AddonEditForm: TAddonEditForm
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = NumEdit
     AnchorSideTop.Side = asrCenter
-    Left = 6
-    Height = 15
-    Top = 58
-    Width = 36
-    BorderSpacing.Left = 6
+    Left = 8
+    Height = 20
+    Top = 74
+    Width = 46
+    BorderSpacing.Left = 8
     Caption = 'номер'
     ParentColor = False
   end
@@ -81,12 +82,12 @@ object AddonEditForm: TAddonEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = CorrectionRadioButton
     AnchorSideTop.Side = asrBottom
-    Left = 81
-    Height = 23
-    Top = 54
-    Width = 80
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
+    Left = 104
+    Height = 28
+    Top = 70
+    Width = 100
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 8
     TabOrder = 2
   end
   object NoteEdit: TEdit
@@ -96,25 +97,25 @@ object AddonEditForm: TAddonEditForm
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 81
-    Height = 23
-    Top = 83
-    Width = 463
+    Left = 104
+    Height = 28
+    Top = 106
+    Width = 576
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    BorderSpacing.Right = 6
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 8
+    BorderSpacing.Right = 8
     TabOrder = 3
   end
   object NoteLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = NoteEdit
     AnchorSideTop.Side = asrCenter
-    Left = 6
-    Height = 15
-    Top = 87
-    Width = 69
-    BorderSpacing.Left = 6
+    Left = 8
+    Height = 20
+    Top = 110
+    Width = 88
+    BorderSpacing.Left = 8
     Caption = 'примечание'
     ParentColor = False
   end
@@ -123,11 +124,11 @@ object AddonEditForm: TAddonEditForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = NumEdit
     AnchorSideTop.Side = asrCenter
-    Left = 177
-    Height = 15
-    Top = 58
-    Width = 137
-    BorderSpacing.Left = 16
+    Left = 224
+    Height = 20
+    Top = 74
+    Width = 179
+    BorderSpacing.Left = 20
     Caption = 'дата введения в действие'
     ParentColor = False
   end
@@ -137,16 +138,16 @@ object AddonEditForm: TAddonEditForm
     AnchorSideTop.Control = NumEdit
     AnchorSideTop.Side = asrCenter
     AnchorSideRight.Side = asrBottom
-    Left = 319
-    Height = 23
-    Top = 54
-    Width = 79
+    Left = 409
+    Height = 28
+    Top = 70
+    Width = 100
     CenturyFrom = 1941
     MaxDate = 401768
     MinDate = -53780
     ParentFont = False
     TabOrder = 4
-    BorderSpacing.Left = 5
+    BorderSpacing.Left = 6
     TrailingSeparator = False
     TextForNullDate = 'NULL'
     LeadingZeros = True
@@ -166,12 +167,12 @@ object AddonEditForm: TAddonEditForm
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = NoteEdit
     AnchorSideTop.Side = asrBottom
-    Left = 6
-    Height = 15
-    Top = 122
-    Width = 34
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 16
+    Left = 8
+    Height = 20
+    Top = 154
+    Width = 43
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 20
     Caption = 'Файл:'
     Font.Style = [fsBold]
     ParentColor = False
@@ -181,12 +182,12 @@ object AddonEditForm: TAddonEditForm
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = FileLabel
     AnchorSideTop.Side = asrBottom
-    Left = 6
-    Height = 19
-    Top = 143
-    Width = 191
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
+    Left = 8
+    Height = 24
+    Top = 182
+    Width = 241
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 8
     Caption = 'Не заменять файл приложения'
     TabOrder = 5
     OnChange = NotChangeFileCheckBoxChange
@@ -196,14 +197,14 @@ object AddonEditForm: TAddonEditForm
     AnchorSideTop.Control = NotChangeFileCheckBox
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = OpenButton
-    Left = 6
-    Height = 23
-    Top = 168
-    Width = 501
+    Left = 8
+    Height = 28
+    Top = 214
+    Width = 626
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    BorderSpacing.Right = 5
+    BorderSpacing.Left = 8
+    BorderSpacing.Top = 8
+    BorderSpacing.Right = 6
     ParentFont = False
     ReadOnly = True
     TabOrder = 6
@@ -215,16 +216,16 @@ object AddonEditForm: TAddonEditForm
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = FileNameEdit
     AnchorSideBottom.Side = asrBottom
-    Left = 512
-    Height = 29
-    Top = 165
-    Width = 32
+    Left = 640
+    Height = 36
+    Top = 210
+    Width = 40
     Align = alCustom
     Anchors = [akTop, akRight]
     AutoSize = True
-    BorderSpacing.Right = 6
-    Constraints.MinHeight = 29
-    Constraints.MinWidth = 32
+    BorderSpacing.Right = 8
+    Constraints.MinHeight = 36
+    Constraints.MinWidth = 40
     Images = Images.PX24
     ImageIndex = 12
     OnClick = OpenButtonClick
@@ -235,19 +236,19 @@ object AddonEditForm: TAddonEditForm
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     Left = 2
-    Height = 47
-    Top = 210
-    Width = 546
+    Height = 56
+    Top = 266
+    Width = 684
     Align = alBottom
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
     BorderSpacing.Left = 2
-    BorderSpacing.Top = 16
+    BorderSpacing.Top = 20
     BorderSpacing.Right = 2
-    BorderSpacing.Bottom = 5
+    BorderSpacing.Bottom = 6
     BevelOuter = bvNone
-    ClientHeight = 47
-    ClientWidth = 546
+    ClientHeight = 56
+    ClientWidth = 684
     TabOrder = 7
     object CancelButton: TSpeedButton
       AnchorSideTop.Control = ButtonPanelBevel
@@ -255,13 +256,13 @@ object AddonEditForm: TAddonEditForm
       AnchorSideRight.Control = ButtonPanel
       AnchorSideRight.Side = asrBottom
       Cursor = crHandPoint
-      Left = 442
+      Left = 563
       Height = 34
-      Top = 6
-      Width = 99
+      Top = 8
+      Width = 115
       Anchors = [akTop, akRight]
       AutoSize = True
-      BorderSpacing.Right = 5
+      BorderSpacing.Right = 6
       Caption = ' Отменить '
       Images = Images.PX24
       ImageIndex = 7
@@ -275,10 +276,10 @@ object AddonEditForm: TAddonEditForm
       AnchorSideTop.Side = asrCenter
       AnchorSideRight.Control = CancelButton
       Cursor = crHandPoint
-      Left = 338
+      Left = 442
       Height = 34
-      Top = 6
-      Width = 104
+      Top = 8
+      Width = 121
       Anchors = [akTop, akRight]
       AutoSize = True
       Caption = ' Сохранить '
@@ -291,9 +292,9 @@ object AddonEditForm: TAddonEditForm
     end
     object ButtonPanelBevel: TBevel
       Left = 0
-      Height = 6
+      Height = 8
       Top = 0
-      Width = 546
+      Width = 684
       Align = alTop
       Shape = bsTopLine
     end
